infra/kubernetes/backend-movies-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  namespace: re-api-books-dev
  labels:
    app: movies-service
spec:
  type: ClusterIP
  selector:
    app: movies-service
  ports:
    - port: 50051
      targetPort: 50051
