infra/kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: re-api-books-dev
  labels:
    app: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
